<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_gradient">

    <View
        android:id="@+id/orbTop"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginStart="-120dp"
        android:layout_marginTop="-130dp"
        android:alpha="0.55"
        android:background="@drawable/bg_splash_orb_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/orbBottom"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginEnd="-120dp"
        android:layout_marginBottom="-130dp"
        android:alpha="0.45"
        android:background="@drawable/bg_splash_orb_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/identityCluster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/loadingBlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58">

        <View
            android:layout_width="1dp"
            android:layout_height="16dp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/ringOuter"
                android:layout_width="132dp"
                android:layout_height="132dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_splash_ring" />

            <View
                android:id="@+id/ringInner"
                android:layout_width="132dp"
                android:layout_height="132dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_splash_ring_soft" />

            <FrameLayout
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_splash_logo_core">

                <ImageView
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/cd_splash_logo"
                    android:src="@drawable/ic_splash_wifi"
                    app:tint="@android:color/white" />
            </FrameLayout>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:fontFamily="sans-serif-black"
            android:letterSpacing="-0.01"
            android:text="@string/splash_title"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="18dp"
                android:layout_height="1dp"
                android:background="#52FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="0.18"
                android:text="@string/splash_tagline"
                android:textAllCaps="true"
                android:textColor="#CCFFFFFF"
                android:textSize="11sp" />

            <View
                android:layout_width="18dp"
                android:layout_height="1dp"
                android:background="#52FFFFFF" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_splash_bottom_overlay" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loadingBlock"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/bg_splash_loading_track">

            <View
                android:id="@+id/loadingIndicator"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_splash_loading_indicator" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.16"
            android:text="@string/splash_loading"
            android:textAllCaps="true"
            android:textColor="#99FFFFFF"
            android:textSize="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/splash_version"
            android:textColor="#66FFFFFF"
            android:textSize="9sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
